// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NodeCountInput> Multi AZ renders with no quota 1`] = `
<FormGroup
  className="compute-nodes-select"
  fieldId="compute-nodes"
  label="compute nodes"
>
  <div>
    <FormSelect
      aria-label="Compute nodes"
      className=""
      isDisabled={true}
      isRequired={false}
      isValid={true}
      name="compute-nodes"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      validated="default"
      value=""
    >
      <FormSelectOption
        key="9"
        label="3"
        value={9}
      />
    </FormSelect>
    <span>
      × 3 zones =
       
       
      compute nodes
    </span>
  </div>
</FormGroup>
`;

exports[`<NodeCountInput> Multi AZ renders with some quota 1`] = `
<FormGroup
  className="compute-nodes-select"
  fieldId="compute-nodes"
  label="compute nodes"
>
  <div>
    <FormSelect
      aria-label="Compute nodes"
      className=""
      isDisabled={false}
      isRequired={false}
      isValid={true}
      name="compute-nodes"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      validated="default"
      value=""
    >
      <FormSelectOption
        key="9"
        label="3"
        value={9}
      />
    </FormSelect>
    <span>
      × 3 zones =
       
       
      compute nodes
    </span>
  </div>
</FormGroup>
`;

exports[`<NodeCountInput> Single AZ renders with no quota 1`] = `
<FormGroup
  className="compute-nodes-select"
  fieldId="compute-nodes"
  label="compute nodes"
>
  <div>
    <FormSelect
      aria-label="Compute nodes"
      className=""
      isDisabled={true}
      isRequired={false}
      isValid={true}
      name="compute-nodes"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      validated="default"
      value=""
    >
      <FormSelectOption
        key="4"
        label="4"
        value={4}
      />
    </FormSelect>
  </div>
</FormGroup>
`;

exports[`<NodeCountInput> Single AZ renders with some quota 1`] = `
<FormGroup
  className="compute-nodes-select"
  fieldId="compute-nodes"
  label="compute nodes"
>
  <div>
    <FormSelect
      aria-label="Compute nodes"
      className=""
      isDisabled={false}
      isRequired={false}
      isValid={true}
      name="compute-nodes"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      validated="default"
      value=""
    >
      <FormSelectOption
        key="4"
        label="4"
        value={4}
      />
      <FormSelectOption
        key="5"
        label="5"
        value={5}
      />
      <FormSelectOption
        key="6"
        label="6"
        value={6}
      />
      <FormSelectOption
        key="7"
        label="7"
        value={7}
      />
      <FormSelectOption
        key="8"
        label="8"
        value={8}
      />
      <FormSelectOption
        key="9"
        label="9"
        value={9}
      />
      <FormSelectOption
        key="10"
        label="10"
        value={10}
      />
    </FormSelect>
  </div>
</FormGroup>
`;
